# llm-cost-simulator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  update-prices.yml
docs/: architecture.md  methodology.md
examples/: scenario.yaml
src/tokenomics/: __init__.py  catalog.py  cli.py  estimator.py  scenario.py  tokens.py  workload.py
src/tokenomics/api/: __init__.py  main.py
src/tokenomics/data/: __init__.py
tests/: test_api_cli.py  test_core.py
web/: README.md  package-lock.json  package.json
web/app/: Calculator.tsx  layout.tsx  page.tsx
web/data/: catalog.json
web/lib/: cost.ts
